# dungeon-blitz-r

./: .gitattributes  .gitignore  LevelsNR_HEAD.swf  Play Multiplayer with Discord.bat  README.md  dev-mac.command  dev-windows.bat  package-lock.json  package.json  tmp_inspect_methods.ts
.codex/environments/: environment.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: balance_issue.yml  bug_report.yml  content_gap.yml  documentation.yml  feature_request.yml  gameplay_bug.yml  localization_issue.yml
.github/workflows/: release-on-package-update.yml  triage-labels.yml
assets/as2/: TrainingController.as2
docs/: HOSTING.md  SECURITY.md
src/server/: .discord-linked-roles.json  .env.example  Accounts.json  discord-bridge.config.json  discord-bridge.dev.config.json  discord-social-bridge.config.json  launcher.config.json  main.ts  package-lock.json  package.json  patch_test.js  test_output.txt  tsconfig.json
src/server/auth/: PasswordAuth.ts
src/server/core/: AILogic.ts  CharacterTemplates.ts  Client.ts  Debug.ts  DungeonBlitzSwf.ts  DungeonEntryDisplay.ts  DungeonInstance.ts  DungeonLevelScale.ts  DungeonRunStats.ts  Entity.ts  Enums.ts  GameData.ts  GlobalState.ts  LevelConfig.ts  LevelScope.ts  MovementAuthority.ts  PartySync.ts  PersistentDungeonSnapshot.ts  PetConfig.ts  PresenceService.ts  RoomBossState.ts  SharedDungeonProgress.ts  SocialState.ts  StaticServer.ts  SvarSpiteDungeonCompletionPatch.ts  TalentConfig.ts  TransferTokenAllocator.ts  WolfsEndDungeonStatsPolicy.ts  config.ts  loadEnv.ts  server.ts
src/server/data/: AbilityTypes.json  Accounts.json  BuildingTypes.json  Charms.json  ConsumableTypes.json  DialogueTextNormalizer.ts  DialogueTranslationLoader.ts  DialogueTranslations.pt-br.json  DialogueTranslations.tr.json  DyeTypes.json  EntTypes.json  Materials.json  MissionDialogues.pt-br.json  MissionDialogues.tr.json  MissionGroups.json  MissionLoader.ts  MissionTypes.json  NpcDialogueLoader.ts  NpcDialogues.json  NpcDialogues.pt-br.json  NpcDialogues.tr.json  NpcLoader.ts  PortugueseTextLocalizer.ts  door_map.json  dungeon_enemy_elements.json  egg_types.json  gear_data.json  level_config.json  mage_template.json  mount_ids.json  packet_types.json  paladin_template.json  pet_types.json  rogue_template.json
src/server/native_bridge/: BridgeMain.cpp  CMakeLists.txt  ChatHandler.cpp  ChatHandler.hpp  ChatTypes.hpp  DiscordBridge.cpp  DiscordBridge.hpp  PacketParser.cpp  PacketParser.hpp  README.md  build-macos.sh  build-windows.bat
src/server/native_bridge/discord_social_sdk/include/: discordpp.h
src/server/native_bridge/discord_social_sdk/lib/debug/: discord_partner_sdk.aar  discord_partner_sdk.lib  libdiscord_partner_sdk.dylib
src/server/native_bridge/discord_social_sdk/lib/debug/arm64/: discord_partner_sdk.lib
src/server/native_bridge/discord_social_sdk/lib/release/: discord_partner_sdk.aar  libdiscord_partner_sdk.dbg
src/server/native_bridge/discord_social_sdk/lib/release/arm64/: discord_partner_sdk.lib
src/server/native_bridge/discord_social_sdk/lib/release/discord_partner_sdk.xcframework/ios-arm64-simulator/discord_partner_sdk.framework/: Info.plist
src/server/native_bridge/discord_social_sdk/lib/release/discord_partner_sdk.xcframework/ios-arm64/discord_partner_sdk.framework/: Info.plist
tools/: runDevDiscordWithUrls.js
(+320 files in other folders)
